RT1060 MCUXpresso guide (#227)

--- a/src/pages/_partials/_integration-guide-table.mdx
+++ b/src/pages/_partials/_integration-guide-table.mdx
@@ -1,11 +1,12 @@
 <center>
 
-| MCU Architecture |                        Getting Started Guide                         |
-| ---------------- | :------------------------------------------------------------------: |
-| ARM Cortex-M     |    [ARM Cortex-M Integration Guide](/docs/mcu/arm-cortex-m-guide)    |
-| nRF Connect SDK  | [nRF Connect SDK Integration Guide](/docs/mcu/nrf-connect-sdk-guide) |
-| ESP32 ESP-IDF    |       [ESP32 ESP-IDF Integration Guide](/docs/mcu/esp32-guide)       |
-| ESP8266          |  [ESP8266 RTOS Integration Guide](/docs/mcu/esp8266-rtos-sdk-guide)  |
-| Dialog DA1469x   |       [DA1469x Integration Guide](/docs/mcu/da1469x-sdk-guide)       |
+| MCU Architecture  |                        Getting Started Guide                         |
+| ----------------- | :------------------------------------------------------------------: |
+| ARM Cortex-M      |    [ARM Cortex-M Integration Guide](/docs/mcu/arm-cortex-m-guide)    |
+| nRF Connect SDK   | [nRF Connect SDK Integration Guide](/docs/mcu/nrf-connect-sdk-guide) |
+| ESP32 ESP-IDF     |       [ESP32 ESP-IDF Integration Guide](/docs/mcu/esp32-guide)       |
+| ESP8266           |  [ESP8266 RTOS Integration Guide](/docs/mcu/esp8266-rtos-sdk-guide)  |
+| Dialog DA1469x    |       [DA1469x Integration Guide](/docs/mcu/da1469x-sdk-guide)       |
+| MCUXpresso RT1060 |  [MCUXpresso SDK for i.MX RT Guide](/docs/mcu/arm-mcuxpresso-guide)  |
 
 </center>
