Run yarn lint:prettier:fix (#231)

--- a/docs/mcu/arm-mcuxpresso-guide.mdx
+++ b/docs/mcu/arm-mcuxpresso-guide.mdx
@@ -42,8 +42,8 @@ The strategy documented here follows these high-level steps:
    [example HTTPS client port](https://github.com/memfault/mcuxpresso-rt1060-example/blob/e1302d2d832ade87cbc49974b270b11fef3c3891/lwip_httpscli_mbedTLS/httpsclient.c)
    and associated
    [application changes](https://github.com/memfault/mcuxpresso-rt1060-example/blob/e1302d2d832ade87cbc49974b270b11fef3c3891/source/lwip_httpscli_mbedTLS_freertos.c)
-   for the i.MX RT1060 LwIP project, and configure Memfault Project Key for uploading
-   Memfault data from the EVK
+   for the i.MX RT1060 LwIP project, and configure Memfault Project Key for
+   uploading Memfault data from the EVK
 
 ## Part 1: Setup and Verify LwIP Sample Application
 
@@ -108,8 +108,8 @@ the Memfault Demo CLI is connected to the debug UART in order to test the
 Memfault functionality, and an HTTPS client is enabled over the Ethernet
 connection for uploading Memfault data.
 
-Note that the provided HTTPS client example is specific to the i.MX RT1060 EVK sample
-app; other boards will potentially require a different connectivity
+Note that the provided HTTPS client example is specific to the i.MX RT1060 EVK
+sample app; other boards will potentially require a different connectivity
 implementation.
 
 :::
