Update arm-mcuxpresso-guide.mdx (#236)
Updating the page title and the side bar label so when you search "NXP" in the docs, this guide will pop up first since it doesn't right now

--- a/docs/mcu/arm-mcuxpresso-guide.mdx
+++ b/docs/mcu/arm-mcuxpresso-guide.mdx
@@ -1,7 +1,7 @@
 ---
 id: arm-mcuxpresso-guide
-title: MCUXpresso Getting Started Guide for ARM
-sidebar_label: MCUXpresso SDK for i.MX RT
+title: NXP MCUXpresso Getting Started Guide for ARM
+sidebar_label: NXP MCUXpresso SDK for i.MX RT
 ---
 
 This tutorial will go over integrating the
