Change mcuxpresso docs link to include nxp (#237)
### Summary
Update link for potential search improvement.

--- a/docs/mcu/arm-nxp-mcuxpresso-guide.mdx
+++ b/docs/mcu/arm-nxp-mcuxpresso-guide.mdx
@@ -1,5 +1,5 @@
 ---
-id: arm-mcuxpresso-guide
+id: arm-nxp-mcuxpresso-guide
 title: NXP MCUXpresso Getting Started Guide for ARM
 sidebar_label: NXP MCUXpresso SDK for i.MX RT
 ---
