Add NXP to embed title (#240)
### Summary
Add NXP to embed docs title.

--- a/embed/mcu/arm-nxp-mcuxpresso-guide.mdx
+++ b/embed/mcu/arm-nxp-mcuxpresso-guide.mdx
@@ -1,5 +1,5 @@
 ---
-title: MCUXpresso Getting Started Guide for ARM
+title: NXP MCUXpresso Getting Started Guide for ARM
 ---
 
 import Docs from "@site/docs/mcu/arm-nxp-mcuxpresso-guide.mdx";
